--- a/tentang.html
+++ b/tentang.html
@@ -304,8 +304,8 @@
     <!-- NAVIGATION -->
     <div class="nav-bottom">
       <a href="pendahuluan.html">← Pendahuluan</a>
-      <a href="index.html">Home</a>
-      <a href="proyek.html">Proyek →</a>
+      <a href="HOME.html">Home</a>
+      <a href="project.html">Proyek →</a>
     </div>
   </div>
 
