--- a/tentang project.html
+++ b/tentang project.html
@@ -599,7 +599,7 @@
   <!-- NAV -->
   <div class="nav-bottom">
     <a href="pendahuluan.html">← Pendahuluan</a>
-    <a href="index.html">Home</a>
+    <a href="HOME.html">Home</a>
     <a href="lampiran.html">Lampiran →</a>
   </div>
 
