--- a/index.html
+++ b/index.html
@@ -309,27 +309,27 @@
   </div>
 
   <!-- MENU -->
-  <a class="div2 menu">
+  <a href="tentang.html" class="div2 menu">
     <span class="icon">👤</span>
     <span class="text">Tentang Peserta</span>
   </a>
 
-  <a class="div3 menu">
+  <a href="pendahuluan.html" class="div3 menu">
     <span class="icon">✏️</span>
     <span class="text">Pendahuluan</span>
   </a>
 
-  <a class="div4 menu">
+  <a href="tenatng project.html" class="div4 menu">
     <span class="icon">📄</span>
     <span class="text">Tentang Proyek</span>
   </a>
 
-  <a class="div5 menu">
+  <a href="project.html" class="div5 menu">
     <span class="icon">▶️</span>
     <span class="text">Proyek</span>
   </a>
 
-  <a class="div6 menu">
+  <a href="lampiran.html" class="div6 menu">
     <span class="icon">📎</span>
     <span class="text">Lampiran</span>
   </a>
