--- a/pendahuluan.html
+++ b/pendahuluan.html
@@ -478,7 +478,7 @@
 
   <!-- NAV -->
   <div class="nav-bottom">
-    <a href="tentang-peserta.html">← Tentang Peserta</a>
+    <a href="tentang.html">← Tentang Peserta</a>
     <a href="index.html">Home</a>
     <a href="proyek.html">Proyek →</a>
   </div>
