--- a/tentang.html
+++ b/tentang.html
@@ -304,7 +304,7 @@
     <!-- NAVIGATION -->
     <div class="nav-bottom">
       <a href="pendahuluan.html">← Pendahuluan</a>
-      <a href="HOME.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="project.html">Proyek →</a>
     </div>
   </div>
