--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <span class="text">Pendahuluan</span>
   </a>
 
-  <a href="tenatng project.html" class="div4 menu">
+  <a href="tentang project.html" class="div4 menu">
     <span class="icon">📄</span>
     <span class="text">Tentang Proyek</span>
   </a>
