--- a/tentang.html
+++ b/tentang.html
@@ -269,7 +269,7 @@
         <div class="row">
           <div class="label">Nama</div>
           <div>:</div>
-          <div>Ilham Putranaya, A.Md</div>
+          <div>Dimas Kurnia Sandi</div>
         </div>
         <div class="row">
           <div class="label">NISN</div>
@@ -279,23 +279,23 @@
         <div class="row">
           <div class="label">Tempat, Tgl Lahir</div>
           <div>:</div>
-          <div>Bumi, 00/13/xxxx</div>
+          <div>Bumi, 04/03/2008</div>
         </div>
         <div class="row">
           <div class="label">Keahlian</div>
           <div>:</div>
           <div>
-            Pembuatan Video,<br>
+            Pembuatan Website,<br>
             Editing Video,<br>
-            Desain Vector
+            Desain Poster
           </div>
         </div>
         <div class="row">
           <div class="label">Alamat</div>
           <div>:</div>
           <div>
-            Di atas Bumi Di bawah Langit<br>
-            RT 000 / RW 000
+            Dayu/Dayurejo/Jawa timur<br>
+            RT 014 / RW 004
           </div>
         </div>
       </div>
