--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
     <img src="icon/pendahuluan.png" alt="Pendahuluan" class="icon">
     <span class="text">Pendahuluan</span>
   </a>
-  <a href="tentang project.html" class="div4 menu">
-    <img src="icon/tentang-proyek.png" alt="Tentang Proyek" class="icon">
+  <a href="tentang-project.html" class="div4 menu">
+    <img src="icon/tentang-project.png" alt="Tentang Project" class="icon">
     <span class="text">Tentang Proyek</span>
   </a>
   <a href="project.html" class="div5 menu">
-    <img src="icon/proyek.png" alt="Proyek" class="icon">
+    <img src="icon/project.jpg" alt="Project" class="icon">
     <span class="text">Proyek</span>
   </a>
   <a href="lampiran.html" class="div6 menu">
