--- a/index.html
+++ b/index.html
@@ -264,9 +264,10 @@
 <div class="parent">
   <!-- PROFIL -->
   <div class="div1 profile">
-    <img src="https://via.placeholder.com/300" alt="Foto Peserta">
-    <h3>Nama Peserta</h3>
+    <img src="icon/Profile.jpg" alt="Foto Peserta">
+    <h3>DIMAS KURNIA SANDI</h3>
     <p>Desain Komunikasi Visual</p>
+    <p>Design Website,Editing Video,Design poster</p>
   </div>
   <!-- HERO -->
   <div class="div7 hero">
@@ -288,7 +289,7 @@
     <span class="text">Tentang Proyek</span>
   </a>
   <a href="project.html" class="div5 menu">
-    <img src="icon/project.jpg" alt="Project" class="icon">
+    <img src="icon/project.png" alt="Project" class="icon">
     <span class="text">Proyek</span>
   </a>
   <a href="lampiran.html" class="div6 menu">
