--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
       object-fit: cover;
       border-radius: 50%;
       margin-bottom: 12px;
-      border: 3px solid #4A90E2;
+      border: 3px solid #ffffff;
     }
     .profile h3 {
       font-size: 18px;
       margin-bottom: 4px;
-      color: #1E90FF;
+      color: #96e0f7;
     }
     .profile p {
       font-size: 14px;
@@ -267,7 +267,8 @@
     <img src="icon/Profile.jpg" alt="Foto Peserta">
     <h3>DIMAS KURNIA SANDI</h3>
     <p>Desain Komunikasi Visual</p>
-    <p>Design Website,Editing Video,Design poster</p>
+    <p>
+      Design Website,Editing Video,Design poster</p>
   </div>
   <!-- HERO -->
   <div class="div7 hero">
