--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <img src="icon/pendahuluan.png" alt="Pendahuluan" class="icon">
     <span class="text">Pendahuluan</span>
   </a>
-  <a href="tentang-project.html" class="div4 menu">
+  <a href="tentang project.html" class="div4 menu">
     <img src="icon/tentang-project.png" alt="Tentang Project" class="icon">
     <span class="text">Tentang Proyek</span>
   </a>
