--- a/pendahuluan.html
+++ b/pendahuluan.html
@@ -480,7 +480,7 @@
   <div class="nav-bottom">
     <a href="tentang.html">← Tentang Peserta</a>
     <a href="index.html">Home</a>
-    <a href="proyek.html">Proyek →</a>
+    <a href="project.html">Project →</a>
   </div>
 
   <!-- FOOTER -->
